feat: add include_npm_sources to npm_package

--- a/npm/private/test/npm_package/BUILD.bazel
+++ b/npm/private/test/npm_package/BUILD.bazel
@@ -22,7 +22,10 @@ js_library(
 
 npm_package(
     name = "pkg",
-    srcs = [":lib_a"],
+    srcs = [
+        ":lib_a",
+        ":node_modules/chalk",  # this node_modules dep will be filtered out
+    ],
     visibility = ["//visibility:public"],
 )
 
